--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.2.1",
+    "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "dayjs": "^1.11.7",
+    "less-loader": "^11.1.0",
+    "vue": "^3.2.13",
+    "vue-pug-plugin": "^2.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -18,7 +23,9 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "sass": "^1.56.2",
+    "sass-loader": "^13.2.0"
   },
   "eslintConfig": {
     "root": true,
