--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.6",
     "axios": "^1.2.1",
+    "bootstrap": "^5.2.3",
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
     "dayjs": "^1.11.7",
     "less-loader": "^11.1.0",
+    "pexels": "^1.4.0",
     "vue": "^3.2.13",
     "vue-pug-plugin": "^2.0.3"
   },
